fix spacing for the teaching experience section

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,10 +121,6 @@ hr {
   opacity: 0.25;
 }
 
-.verticalLine {
-  border-left: thick solid black;
-}
-
 h6,
 .h6,
 h5,
